Debugged the grid being corrupted on startup and moved the functionality for printing text centered into the Terminal interface and moved the implementation to the LanternaTerminalAdapter.